TABLE City {
  city_id SERIAL [PRIMARY KEY]
  city_name VARCAHR(100)
}

TABLE Address {
  address_id SERIAL [primary key]
  city_id integer [not null]
  address VARCHAR(255) [not null]
  postal_code CHAR(5) [not null]
}
REF: Address.city_id > City.city_id


TABLE Organizer {
  organizer_id SERIAL [primary key]
  organizer_name VARCHAR(100) [not null]
  phone VRCAHR(20) UNIQUE [not null]
  email VARCHAR(255) UNIQUE [not null]
  address_id integer [not null]
}
REF: Organizer.organizer_id - Address.address_id


TABLE School {
  school_id SERIAL [PRIMARY KEY]
  organizer_id integer [not null]
  address_id integer [not null]
  schoolname VARCHAR(100)
  phone VARCHAR(20) UNIQUE [not null]
  eamil VARCHAR(255) UNIQUE [not null]
  open_date DATE [not null]
}
REF: School.organizer_id > Organizer.organizer_id


TABLE Program {
  program_id SERIAL [not null]
  school_id integer [not null]
  program_name VARCHAR(100) [not null]
  starts_date DATE [not null]
  ends__date DATE [not null]
}
REF: Program.school_id > School.school_id

TABLE Class {
  class_id SERIAL [primary key]
  class_name varchar(50)
  program_id integer [not null]
  management_id integer
  school_id integer [not null]
}
REF: Class.program_id > Program.program_id
REF: Class.management_id > Educational_management.management_id
REF: Class.school_id > School.school_id



TABLE Student {
  student_id SERIAL [primary key]
  first_name varchar(50) [not null]
  last_name varchar(50) [not null]
  class_id integer 
}
REF: Student.class_id > Class.class_id

Table Student_info {
  social_security_nr VARCHAR(15) [primary key]
  student_id integer [NOT NULL]
  address_id integer [not null]
  phone VARCHAR(20) UNIQUE [not null]
  email VARCHAR(255) UNIQUE [not null]
}
REF: Student_info.student_id - Student.student_id
REF: Student_info.address_id - Address.address

Table Staff {
  staff_id SERIAL [primary key]
  employee_id integer [not null]
  school_id integer [not null]
  first_name varchar(50) [not null]
  last_name varchar(50) [not null]
  phone varchar(20) UNIQUE [not null]
  email varchar(255) UNIQUE [not null]
  work_title varchar(50) [not null]
}
REF: Staff.school_id > School.school_id
REF: Staff.employee_id - Employee_info.employee_id


Table Consultant {
  consultant_id SERIAL [primary key]
  fee_per_hour integer [not null]
  teacher_id integer [not null]
  organization_nr varchar(11) [not null]
}
REF: Consultant.organization_nr > Consultant_company.organization_nr
REF: Consultant.teacher_id - Teacher.teacher_id 


TABLE Consultant_company {
  organization_nr VARCHAR(11) [primary key]
  company_name varchar(100) [not null]
  f_tax bool [not null]
  phone varchar(20) UNIQUE [not null]
  email varchar(255) UNIQUE [not null]
  address_id integer [not null]
}
REF: Consultant_company.address_id - Address.address_id


TABLE Employee_info {
  employee_id SERIAL [PRIMARY KEY]
  social_security_nr varchar(15) [not null]
  staff_id integer [not null]
  address_id integer [not null]
  salery_per_month integer [not null]
}
REF: Employee_info.staff_id - Staff.staff_id
REF: Employee_info.address_id - Address.address_id

Table Teacher {
  teacher_id SERIAL [primary key]
  employee_id integer
  school_id integer [not null]
  first_name varchar(50) [not null]
  last_name varchar(50) [not null]
  phone varchar(20) UNIQUE [not null]
  email varchar(255) UNIQUE [not null]
}
REF: Teacher.employee_id - Employee_info.employee_id


Table Standalonecourse {
  standalonecourse_id SERIAL [primary key]
  languages VARCHAR(10) [not null]
  course_code varchar(25) [not null]
}
REF: Standalonecourse.course_code - Course_info.course_code

Table Enrollment {
  enrollment_id SERIAL [primary key]
  standalonecourse_id integer [not null]
  student_id integer
  enrollment_date date
  grad varchar(1)
}
REF: Enrollment.standalonecourse_id > Standalonecourse.standalonecourse_id
REF: Enrollment.student_id > Student.student_id

Table Course_info {
  course_code varchar(25) [primary key]
  course_name varchar(50) [not null]
  credits integer [not null]
  descriptions text [not null]
}


Table Course {
  course_id SERIAL [primary key]
  course_code varchar(50) [not null]
  languages varchar(10) [not null]
}
REF: Course.course_code - Course_info.course_code




Table Educational_management {
  management_id SERIAL [primary key]
  employee_id integer [not null]
  first_name VARCHAR(50) [not null]
  last_name varchar(50) [not null]
  phone varchar(20) UNIQUE [not null]
  email varchar(255) UNIQUE [not null]
}
REF: Educational_management.employee_id - Employee_info.employee_id


Table Teacher_Course {
  teacher_course_id SERIAL [not null]
  teacher_id integer
  course_id integer [not null]
  starts_date DATE [not null]
  ends_date Date [not null]
}
REF: Teacher_Course.teacher_id > Teacher.teacher_id
REF: Teacher_Course.course_id > Course.course_id

Table Program_Course {
  program_course_id SERIAL [primary key]
  program_id integer [not null]
  course_id integer [not null]
  starts_date DATE
  ends_date date
}
REF: Program_Course.program_id > Program.program_id
REF: Program_Course.course_id > Course.course_id

TABLE Teacher_Standalonecourse {
  teacher_standalonecourse_id SERIAL [primary key]
  teacher_id integer
  standalonecourse_id integer [not null]
  starts_date date [not null]
  ends_date date [not null]
}
REF: Teacher_Standalonecourse.teacher_id > Teacher.teacher_id
REF: Teacher_Standalonecourse.standalonecourse_id > Standalonecourse.standalonecourse_id


TABLE School_Student {
  school_id integer [not null]
  student_id integer [not null]
  indexes {
    (school_id,student_id)
  }
}
REF: School_Student.school_id > School.school_id
REF: School_Student.student_id > Student.student_id


TABLE School_Standalonecourse {
  school_id integer [not null]
  standalonecourse_id integer [not null]
  indexes {
    (school_id, standalonecourse_id)
  }
}
REF: School_Standalonecourse.school_id > School.school_id
REF: School_Standalonecourse.standalonecourse_id > Standalonecourse.standalonecourse_id


